# dodopayments

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  openapi.yaml
config/: development.toml
migrations/2025-05-17-151639_create_users_table/: up.sql
migrations/2025-05-17-151701_create_transactions_table/: down.sql  up.sql
src/: app.rs  configs.rs  consts.rs  error.rs  lib.rs  logger.rs  main.rs  routes.rs  storage.rs  types.rs  utils.rs
src/error/: container.rs
src/routes/: api_models.rs  auth.rs  health.rs  transaction.rs  user.rs
src/routes/user/: error.rs  password.rs
src/storage/: caching.rs  caching2.rs  db.rs  schema.rs  transformers.rs  types.rs
tests/: configs_test.rs  health_test.rs  storage_test.rs  user_auth_test.rs  utils_test.rs
