[package]
name = "dodopayments"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.14.0"
error-stack = "0.5.0"
thiserror = "1.0.63"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.16"

[build-dependencies]
cargo_metadata = "0.18.1"
