[package]
name = "dodopayments"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.14.0"
error-stack = "0.5.0"
thiserror = "1.0.63"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.16"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2.3"
hyper = "1.4.1"
tower = { version = "0.5.0", features = ["limit", "buffer", "load-shed"] }
tower-http = { version = "0.5.2", features = ["trace"] }
time = { version = "0.3.36", features = ["serde"] }
axum = { version = "0.7.5", features = ["macros"] }
once_cell = "1.19.0"
regex = "1.10.4"

diesel = { version = "2.2.3", features = ["postgres", "serde_json", "time"] }
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }

moka = { version = "0.12.8", features = ["future"] }

[build-dependencies]
cargo_metadata = "0.18.1"
